--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,7 @@
 
   	<div class="col-md-4">
         <div class="card mb-4 shadow-sm">
-        	<a class="" href="/create">
+        	<a class="" href="/main">
 		        <svg class="card-center card-img-top" width="100%" height="225" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Top Tracks"><title>Discover</title><rect width="100%" height="100%" fill="#000"/><text x="50%" y="50%" fill="#fff" font-size="2em" pointer-events="none">TBD</text></svg>
 		      </a>
           <div class="card-body">
@@ -57,7 +57,7 @@
   	</div>
   	<div class="col-md-4">
         <div class="card mb-4 shadow-sm">
-          <a class="" href="/timer">
+          <a class="" href="/main">
 		        <svg class="card-center card-img-top" width="100%" height="225" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Top Tracks"><title>Discover</title><rect width="100%" height="100%" fill="#000"/><text x="50%" y="50%" fill="#fff" font-size="2em" pointer-events="none">TBD</text></svg>
           </a>
           <div class="card-body">
